Admin panel added, log fiile paths added, db connection added
