# backend/internal/downloadManager/handler.go
@@ -3,8 +3,10 @@ package downloadManager
 import (
 	"net/http"
 
+	"github.com/ITU-BeeHub/BeeHub-website/backend/pkg/models"
 	"github.com/gin-gonic/gin"
 	"github.com/sirupsen/logrus"
+	"gorm.io/gorm"
 )
 
 type Handler struct {
@@ -44,7 +46,35 @@ func (h *Handler) Download(c *gin.Context) {
 		return
 	}
 
+	// Kullanıcının IP adresini alıyoruz
+	clientIP := c.ClientIP()
+
+	// İndirme bilgilerini kaydediyoruz
+	if err := h.service.SaveDownload(c, os, clientIP); err != nil {
+		h.logger.Error("Error while saving download info: ", err)
+	}
+
 	// Dosya indirilmeye sunulur
 	h.logger.Infof("File found: %s, serving to client", filePath)
 	c.File(filePath)
+}
+
+// DownloadStatsHandler, tüm kullanıcılar tarafından erişilebilen indirilen dosya istatistiklerini döner.
+// @Summary Get download statistics
+// @Description Returns download statistics for the application.
+// @Tags Download Manager
+// @Produce json
+// @Success 200 {object} map[string]int "Download statistics grouped by OS"
+// @Failure 500 {object} models.ErrorResponse "Internal server error"
+// @Router /download-stats [get]
+func DownloadStatsHandler(db *gorm.DB) gin.HandlerFunc {
+	return func(c *gin.Context) {
+		stats, err := GetDownloadStats(db)
+		if err != nil {
+			c.JSON(http.StatusInternalServerError, models.ErrorResponse{Error: "Could not fetch download stats"})
+			return
+		}
+
+		c.JSON(http.StatusOK, stats)
+	}
 }
